--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" type="text/css" href="slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
     <title>Document</title>
 </head>
 
@@ -31,7 +33,7 @@
                                     <a href="#advantages" id="section-1" class="navigation__item">About</a>
                                 </li>
                                 <li>
-                                    <a href="#about-company" id="section-2" class="navigation__item">Our team</a>
+                                    <a href="#about-company" id="section-2" class="navigation__item">Models</a>
                                 </li>
                                 <li>
                                     <a href="#projects" id="section-3" class="navigation__item">Projects</a>
@@ -82,7 +84,7 @@
                             <div class="events__item">Pop-up @ Steven Allan Brooklyn <br><span>NYC - Sat, August
                                     12/5-8PM</span>
                             </div>
-                            <div class="events__btn">Read more</div>
+                            <button class="events__btn">Read more</button>
                         </div>
                         <div class="hero-section__content__blured-block__content__news">
                             <div class="news__img"></div>
@@ -91,7 +93,7 @@
                                 <div class="news__description__paragraph">Lorem ipsum dolor sit, amet consectetur
                                     adipisicing elit.
                                 </div>
-                                <div class="news__description__btn">Read more</div>
+                                <button class="news__description__btn">Read more</button>
                             </div>
 
                         </div>
@@ -180,7 +182,112 @@
                     </div>
                 </div>
             </div>
+            <div class="wrapper__container slider-section">
+                <div class="slider-section__headline">Select your model</div>
+                <div class="content slider-section__content car-slider">
+
+                    <div class="slide__wrapper slide-1">
+                        <div class="slide__wrapper__container">
+                            <div class="slide__description">
+                                <div class="slide__description__headline">SXT</div>
+                                <div class="slide__description__item">
+                                    <p>Eight‑Speed Automatic Transmission Delivering 303
+                                        HP</p>
+                                    <p>3.6L V6 Engine with Variable Valve</p>
+                                    <p>Rear Back-Up</p>
+                                    <p>Performance Seats</p>
+                                    <p>Apple CarPlay Support and Android</p>
+                                    <p>19‑Inch Satin Carbon Wheels (AWD Models)</p>
+                                </div>
+                                <div class="slide__description__price">
+                                    <div class="slide__description__price__text">$36,265</div>
+                                    <div class="slide__description__price__button-wrapper">
+                                        <button class="slide-btn">
+                                            Buy
+                                            <svg width="180px" height="50px" viewBox="0 0 180 50" class="border">
+                                                <polyline points="179,1 179,49 1,49 1,1 179,1" class="bg-line" />
+                                                <polyline points="179,1 179,49 1,49 1,1 179,1" class="hl-line" />
+                                            </svg>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide__wrapper slide-2">
+                        <div class="slide__wrapper__container">
+                            <div class="slide__description">
+                                <div class="slide__description__headline">GT</div>
+                                <div class="slide__description__item">
+                                    <p>Leather-Wrapped Performance Steering Wheel</p>
+                                    <p>New 20‑inch Satin Carbon aluminum wheels</p>
+                                    <p>Performance Seats</p>
+                                    <p>Performance Front Splitter and Functional Hood Scoop</p>
+                                    <p>305/35ZR20 all-season performance tires</p>
+                                    <p>Widebody competition suspension</p>
+                                </div>
+                                <div class="slide__description__price">
+                                    <div class="slide__description__price__text">$41,500</div>
+                                    <div class="slide__description__price__button-wrapper">
+                                        <button class="slide-btn">
+                                            Buy
+                                            <svg width="180px" height="50px" viewBox="0 0 180 50" class="border">
+                                                <polyline points="179,1 179,49 1,49 1,1 179,1" class="bg-line" />
+                                                <polyline points="179,1 179,49 1,49 1,1 179,1" class="hl-line" />
+                                            </svg>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="slide__wrapper slide-3">
+                        <div class="slide__wrapper__container">
+                            <div class="slide__description">
+                                <div class="slide__description__headline">R/T</div>
+                                <div class="slide__description__item">
+                                    <p>5.7L HEMI VVT V8 Engine with Variable Valve Timing</p>
+                                    <p>Eight‑Speed Automatic Transmission to Deliver</p>
+                                    <p>R/T Grille Badge and Fender Badges</p>
+                                    <p>230‑mm Rear Axle</p>
+                                    <p>Active Exhaust</p>
+                                    <p>20x9‑inch Low-Gloss Granite aluminum wheels</p>
+                                </div>
+                                <div class="slide__description__price">
+                                    <div class="slide__description__price__text">$30,000</div>
+                                    <div class="slide__description__price__button-wrapper">
+                                        <button class="slide-btn">
+                                            Buy
+                                            <svg width="180px" height="50px" viewBox="0 0 180 50" class="border">
+                                                <polyline points="179,1 179,49 1,49 1,1 179,1" class="bg-line" />
+                                                <polyline points="179,1 179,49 1,49 1,1 179,1" class="hl-line" />
+                                            </svg>
+                                        </button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
             <script src="js/menu.js"></script>
+            <script type="text/javascript" src="slick/slick.min.js"></script>
+            <script type="text/javascript">
+                $(document).ready(function () {
+                    const prevArrow = `<div class="prev"></div>`;
+                    const nextArrow = `<div class="next"></div>`;
+                    $('.car-slider').slick({
+                        prevArrow,
+                        nextArrow,
+                        arrows: true,
+                        dots: true,
+                        fade: true,
+                        slidesToShow: 1,
+                    });
+                });
+            </script>
         </main>
         <footer></footer>
     </div>
