--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
     <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <title>Document</title>
 </head>
 
@@ -30,16 +31,16 @@
                         <nav class="header__content__navigation">
                             <ul id="navbar">
                                 <li>
-                                    <a href="#advantages" id="section-1" class="navigation__item">About</a>
+                                    <a href="#about" id="section-1" class="navigation__item">About</a>
                                 </li>
                                 <li>
-                                    <a href="#about-company" id="section-2" class="navigation__item">Models</a>
+                                    <a href="#models" id="section-2" class="navigation__item">Models</a>
                                 </li>
                                 <li>
-                                    <a href="#projects" id="section-3" class="navigation__item">Projects</a>
+                                    <a href="#photos" id="section-3" class="navigation__item">Gallery</a>
                                 </li>
                                 <li>
-                                    <a href="#gallery" id="section-4" class="navigation__item">Gallery</a>
+                                    <a href="#contacts" id="section-4" class="navigation__item">Contacts</a>
                                 </li>
                             </ul>
                             <div class="header__content__navigation__search">
@@ -49,7 +50,8 @@
                                             d="m495 466.1l-119.2-119.2c29.1-35.5 46.5-80.8 46.5-130.3 0-113.5-92.1-205.6-205.6-205.6-113.6 0-205.7 92.1-205.7 205.7s92.1 205.7 205.7 205.7c49.4 0 94.8-17.4 130.3-46.5l119.1 119.1c8 8 20.9 8 28.9 0 8-8 8-20.9 0-28.9zm-443.2-249.4c0-91 73.8-164.8 164.8-164.8 91 0 164.8 73.8 164.8 164.8s-73.8 164.8-164.8 164.8c-91 0-164.8-73.8-164.8-164.8z"
                                             data-original="#000000" fill="#cab039" />
                                     </g>
-                                </svg></div>
+                                </svg>
+                            </div>
                         </nav>
                     </div>
                 </div>
@@ -57,7 +59,7 @@
 
         </header>
         <main>
-            <div class="wrapper__container hero-section">
+            <div class="wrapper__container hero-section" id="home">
                 <div class="content hero-section__content">
                     <div class="hero-section__content__specs">
                         <div class="hero-section__content__specs__headline">Specs</div>
@@ -102,7 +104,7 @@
                     <div class="hero-section__content__blured-block__events"></div>
                 </div>
             </div>
-            <div class="wrapper__container about-section">
+            <div class="wrapper__container about-section" id="about">
                 <div class="content about-section__content">
                     <div class="about-section__content__headline">About Muscleroom</div>
                     <div class="about-section__content__img"></div>
@@ -182,7 +184,7 @@
                     </div>
                 </div>
             </div>
-            <div class="wrapper__container slider-section">
+            <div class="wrapper__container slider-section" id="models">
                 <div class="slider-section__headline">Select your model</div>
                 <div class="content slider-section__content car-slider">
 
@@ -271,27 +273,92 @@
                 </div>
 
             </div>
-            <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-            <script src="js/menu.js"></script>
-            <script type="text/javascript" src="slick/slick.min.js"></script>
-            <script type="text/javascript">
-                $(document).ready(function () {
-                    const prevArrow = `<div class="prev"></div>`;
-                    const nextArrow = `<div class="next"></div>`;
-                    $('.car-slider').slick({
-                        prevArrow,
-                        nextArrow,
-                        arrows: true,
-                        dots: true,
-                        fade: true,
-                        slidesToShow: 1,
-                    });
-                });
-            </script>
-        </main>
-        <footer></footer>
-    </div>
+            <div class="wrapper__container gallery-section" id="photos">
+                <div class="content gallery-section__content">
+                    <button class="gallery-section__content__more-btn">See all photos</button>
+                    <div class="gallery-section__content__headline">Latest<br> photos</div>
 
+                    <a data-fancybox="gallery" href="img/photo-1.jpg">
+                        <div class="gallery-section__content__item" id="photo-1"></div>
+                    </a>
+                    <a data-fancybox="gallery" href="img/photo-2.jpg">
+                        <div class="gallery-section__content__item" id="photo-2"></div>
+                    </a>
+                    <a data-fancybox="gallery" href="img/photo-3.jpg">
+                        <div class="gallery-section__content__item" id="photo-3"></div>
+                    </a>
+                    <a data-fancybox="gallery" href="img/photo-4.jpg">
+                        <div class="gallery-section__content__item" id="photo-4"></div>
+                    </a>
+                    <a data-fancybox="gallery" href="img/photo-5.jpg">
+                        <div class="gallery-section__content__item" id="photo-5"></div>
+                    </a>
+                    <a data-fancybox="gallery" href="img/photo-6.jpg">
+                        <div class="gallery-section__content__item" id="photo-6"></div>
+                    </a>
+                </div>
+            </div>
+            <div class="wrapper__container contacts-section" id="contacts">
+                <div class="content contacts-section__content">
+                    <div class="contacts-section__content__headline">Get in touch</div>
+                    <div class="contacts-section__content__form">
+
+                        <form class="form__block">
+                            <div class="form__block__contacts">
+                                <div class="form__block__contacts__item phone">012 345 67 89</div>
+                                <div class="form__block__contacts__item"><i
+                                        class="fas fa-envelope-open-text"></i>example@email.com</div>
+                                <div class="form__block__contacts__item"><i class="fas fa-map-marked"></i>781
+                                    Eastern Pkwy, Brooklyn, NY 11213, USA</div>
+                            </div>
+                            <input type="text" placeholder="Name" required>
+                            <input type="email" placeholder="Email" required>
+                            <input type="tel" placeholder="Phone" required>
+                            <input type="text" placeholder="Company">
+                            <textarea name="" id="" cols="30" rows="6" placeholder="Your message"></textarea>
+                            <div class="form__block__button-wrapper">
+                                <button class="form-btn">Send
+                                    <svg width="180px" height="50px" viewBox="0 0 180 50" class="border">
+                                        <polyline points="179,1 179,49 1,49 1,1 179,1" class="bg-line" />
+                                        <polyline points="179,1 179,49 1,49 1,1 179,1" class="hl-line" />
+                                    </svg></button></div>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </main>
+        <footer>
+            <div class="wrapper__container footer-section">
+                <div class="content footer-section__content">
+                    <div class="footer-section__content__logo">/<span>MUSCLE</span>/room</div>
+                    <div class="footer-section__content__author">&copy; 2021 ecsPetra</div>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+    <script src="js/menu.js"></script>
+    <script src="js/anchors.js"></script>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.css" />
+    <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
+
+    <script type="text/javascript" src="slick/slick.min.js"></script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            const prevArrow = `<div class="prev"></div>`;
+            const nextArrow = `<div class="next"></div>`;
+            $('.car-slider').slick({
+                prevArrow,
+                nextArrow,
+                arrows: true,
+                dots: true,
+                fade: true,
+                slidesToShow: 1,
+            });
+        });
+    </script>
 </body>
 
 </html>
