--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
               <input type="email" placeholder="Email" required />
               <input type="tel" placeholder="Phone" required />
               <input type="text" placeholder="Company" />
-              <textarea name="" id="" rows="6" placeholder="Your message"></textarea>
+              <textarea name="" id="" cols="30" rows="6" placeholder="Your message"></textarea>
               <div class="form__block__button-wrapper">
                 <button class="form-btn">
                   Send
