--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
         <div class="content contacts-section__content">
           <div class="contacts-section__content__headline">Get in touch</div>
           <div class="contacts-section__content__form">
-            <form class="form__block">
+            <form class="form__block" action="handler.php" method="post">
               <div class="form__block__contacts">
                 <div class="form__block__contacts__item phone">
                   012 345 67 89
