--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <link rel="stylesheet" type="text/css" href="slick/slick.css" />
   <link rel="stylesheet" type="text/css" href="slick/slick-theme.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-  <title>Document</title>
+  <link rel="shortcut icon" href="img/favicon.ico" type="image/png">
+  <meta name="theme-color" content="#141414">
+  <title>MUSCLEroom</title>
 </head>
 
 <body>
@@ -393,51 +395,7 @@
   <script src="https://cdn.jsdelivr.net/gh/fancyapps/fancybox@3.5.7/dist/jquery.fancybox.min.js"></script>
 
   <script type="text/javascript" src="slick/slick.min.js"></script>
-  <script type="text/javascript">
-    $(document).ready(function () {
-      const prevArrow = `<div class="prev"></div>`;
-      const nextArrow = `<div class="next"></div>`;
-      $(".car-slider").slick({
-        prevArrow,
-        nextArrow,
-        arrows: true,
-        dots: true,
-        fade: true,
-        slidesToShow: 1,
-        responsive: [{
-            breakpoint: 1920,
-            settings: {
-              arrows: true,
-            }
-          },
-          {
-            breakpoint: 1280,
-            settings: {
-              arrows: true,
-            }
-          },
-          {
-            breakpoint: 1024,
-            settings: {
-              arrows: true,
-            }
-          },
-          {
-            breakpoint: 768,
-            settings: {
-              arrows: false,
-            }
-          },
-          {
-            breakpoint: 320,
-            settings: {
-              arrows: false,
-            }
-          },
-        ]
-      });
-    });
-  </script>
+  <script type="text/javascript" src="js/slider.js"></script>
 </body>
 
 </html>
