--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               <input type="text" placeholder="Company" />
               <textarea name="" id="" cols="30" rows="6" placeholder="Your message"></textarea>
               <div class="form__block__button-wrapper">
-                <button class="form-btn">
+                <button type="submit" class="form-btn">
                   Send
                   <svg width="180px" height="50px" viewBox="0 0 180 50" class="border">
                     <polyline points="179,1 179,49 1,49 1,1 179,1" class="bg-line" />
